2011-05-09 Till Tantau <tantau@users.sourceforge.net>

	- Reorganized graph drawing documentation.

2011-05-06 Jannis Pohlmann <jannis@xfce.org>

	- Finished the graph drawing library reorganization started by Till.

2011-05-06 Till Tantau <tantau@users.sourceforge.net>

	- Reorganized the graph drawing key and directory
	  structure. The documentation is still missing. Also, lots of
	  files still need to be moved, but I'll leave that to Jannis.
	
2011-05-06 Jannis Pohlmann <jannis@xfce.org>

	- graph drawing:
	  - implement a quadtree optimization in the Walshaw algorithm.
	  - add a simple version of the Hu spring-electrical algorithm that
	    seems to work almost as good as the Walshaw even without
		  the multilevel approach implemented (which is the only thing
		  that really makes the Walshaw algorithm useful).

2011-05-04 Jannis Pohlmann <jannis@xfce.org>

	- graph drawing: 
	  - Initial work on a quad tree implementation for spring and spring
		  electrical algorithms, with unit test.
		- Improve the internals of the Vector class.

2011-05-03 Till Tantau <tantau@users.sourceforge.net>

	- graph drawing: Started to cleanup pgf and tikz layers. Ongoing...

2011-05-03 Jannis Pohlmann <jannis@xfce.org>

	- graph drawing:
		- Fix Walshaw algorithm to properly set the subnodes when copying
		  the coarse graphs. Simplify the code that updates the node
		  coordinates.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- graph drawing:
	  - Modify the doclet to allow underscores in parameter names.
		- Document the Vector class as well as the table, iter and traversal
		  helpers.
		- Remove old table and iterator helpers. Rename helper files. Rename
		  table.merge() and table.copy() to table.custom_merge() and
		  table.custom_copy() to avoid name clashes with luatools. Add 
		  string helpers, including string.parse_braces(). Update algorithms 
		  to work with these changes.
		- Allow vectors to have an origin vector, similar to the Position