@@ -49,20 +49,31 @@
 }
 
 \newenvironment{luacommand}[1]{
-  \begin{pgfmanualentry}
-    \luaextractcommand#1\@@
-    \pgfmanualbody
+  \medskip%
+  \parskip0pt%
+  \leftskip2em\parindent-2em%
+  \luaextractcommand#1\@@%
+  \let\item=\parameteritem%
+  \let\list=\restorelist%
+  % \pgfmanualbody
 }
 {
-  \end{pgfmanualentry}
+%  \smallskip
 }
 
-\newenvironment{parameterdescription}{
-  \list{}{\labelwidth=0pt \leftmargin=0.5cm}
+\makeatletter
+\newenvironment{parameterdescription}{\unskip%
+  \let\item=\parameteritem%
+  \let\list=\restorelist%
 }
 {
-  \endlist
 }
+\let\saveditemcommand=\item
+\let\savedlistcommand=\list
+\def\denselist#1#2{\savedlistcommand{#1}{#2}\parskip0pt\itemsep0pt}
+\def\restorelist{\let\item=\saveditemcommand\denselist}
+\def\parameteritem{\pgfutil@ifnextchar[\parameteritem@{}}%}
+\def\parameteritem@[#1]{\def\test{#1}\ifx\test\pgfutil@empty\else\hskip.7em#1:\fi}
 
 \newenvironment{commandlist}[1]{%
 	\begin{pgfmanualentry}
@@ -222,7 +233,7 @@
 }
 
 \def\luaextractcommand#1#2\@@{%
-  \pgfmanualentryheadline{\declare{\texttt{\string#1}}#2}%
+  \declare{\texttt{\string#1}}#2\par%
 %  \removeats{#1}%
  % \index{\strippedat @\protect\myprintocmmand{\strippedat}}
  % \pgfmanualpdflabel{\textbackslash\strippedat}{}%
@@ -326,6 +337,9 @@
   	\pgfmanualentryheadline{Graph Drawing Algorithm {\ttfamily\declare{#1}}}%
     \index{#1@\protect\texttt{#1} graph drawing algorithm}%
     \index{Graph Drawing Algorithms!#1@\protect\texttt{#1}}
+    \vspace{-3pt}\item{\small {\ttfamily/graph drawing/#1=}\meta{options}}\vspace{-2pt}\par
+    \vspace{-3pt}\item{\small alias {\ttfamily/tikz/#1}}\vspace{-2pt}\par
+    \vspace{-3pt}\item{\small alias {\ttfamily/tikz/graphs/#1}}\vspace{-2pt}\par
     \pgfmanualpdflabel{#1}{}%
     \pgfmanualbody
 }
