@@ -4,6 +4,7 @@
 % Copyright 2010-2011 by Matthias Schulz
 % Copyright 2010-2011 by Stephan Schuster
 % Copyright 2011 by Jannis Pohlmann
+% Copyright 2011 by Till Tantau
 %
 % This file may be distributed and/or modified
 %
@@ -12,17 +13,49 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\section{Graph Drawing Internals}
+\section{The Graph Drawing Engine}
+
+\emph{by Ren\'ee Ahrens, Olof Frahm, Jens Kluttig, Matthias Schulz,
+  Stephan Schuster, and Till Tantau}
+
 \label{section-base-graphdrawing}
 
-TT: This chapter is under heavy construction...
 
 \ifluatex\relax\else{LuaTeX is required for setting this manual section.}\expandafter\endinput\fi
 
-As mentioned before (\ref{section-library-graphdrawing}), the graph
-drawing library makes use of Lua. But where does the control flow
-leave \TeX\ and what happens to your \tikzname\ nodes? The subsequent
-sections will discuss this process in deep. The general approach is to
+\subsection{Overview}
+
+This chapter explains in detail how the graph drawing engine works. As
+explained in Section~\ref{section-library-graphdrawing}, the graph
+drawing engine provides a connection between the syntax of \tikzname\
+and \pgfname for specifying graphs and code written in the Lua
+programming language for computing layouts. The present section will
+discuss this process in detail.
+
+TT: To be written...
+
+
+\subsection{Graph Drawing Scopes}
+
+\subsection{Graph Parameters}
+
+\subsection{Lua Layer: Overview}
+
+\subsection{Lua Layer: Implementing Graph Drawing Algorithms}
+
+\subsection{Lua Layer: The Module System}
+
+\subsection{Lua Layer: Class Structure}
+
+\subsection{Lua Layer: Class Reference}
+
+
+
+
+TT: Rewrite the following...
+
+
+The general approach is to 
 intercept the immediate placement of the nodes and pass them down to
 Lua, which does all the placement stuff. After the selected graph
 drawing algorithm has finished, it writes the nodes back to
@@ -513,6 +546,7 @@ Note that in all but the first case the binding to |graphdrawing|
 stays the same.  Also, using these assignments, you can't accidentally
 remove your access to the |pgf| or any imported modules as the last
 two assignments show (the |Sys:log| method still works).
+
 
 \subsection{Lua Documentation}
 This sections provides a full documentation of all relevant Lua classes
