@@ -165,10 +165,10 @@
 \begin{document}
 
 \ifluatex
-\include{pgfmanual-en-tikz-graphdrawing}
-\include{pgfmanual-en-library-graphdrawing-trees}
-\include{pgfmanual-en-library-graphdrawing-spring}
-\include{pgfmanual-en-library-graphdrawing-misc}
+%\include{pgfmanual-en-tikz-graphdrawing}
+%\include{pgfmanual-en-library-graphdrawing-trees}
+%\include{pgfmanual-en-library-graphdrawing-spring}
+%\include{pgfmanual-en-library-graphdrawing-misc}
 \include{pgfmanual-en-base-graphdrawing}
 \fi
 \end{document}
