@@ -9,13 +9,13 @@ end
 %><%=func.private and "local " or ""%>\begin{luacommand}{{<%=func.name%>}(<%for i, paramname in ipairs(func.param) do%><%if i ~= 1 then%><%=","%><%end%><%="\\meta{"..paramname:gsub('_', '\\_').."}"%><%end%>)}
 <%=func.description or ""%>
 <%if type(func.param) == "table" and #func.param > 0 then%><%hasParam=nil%><%for p=1, #func.param do if func.param[func.param[p]] then hasParam=1 end end%><%if hasParam then%>
-Parameters:
+\emph{Parameters:}
 \begin{parameterdescription}
 	<%for p = 1, #func.param do%><%if func.param[func.param[p]] then%><%local param_name = func.param[p] or ''; param_name = param_name:gsub('_', '\\_')%><%local param_desc = func.param[func.param[p]] or ''; param_desc = param_desc:gsub('  ', ' ')%>\item[\meta{<%=param_name%>}] <%=param_desc%><%end%><%end%>
 \end{parameterdescription}
 <%end%><%end%>
 <%if type(func.ret) == "string" then%>
-Return value:
+\emph{Return value:}
 \begin{parameterdescription} 
   \item[] <%=func.ret%>
 \end{parameterdescription}
@@ -28,10 +28,10 @@ Return values:
 \end{parameterdescription}
 <%end%>
 <%if type(func.see) == "string" then %>
-See also:
+\emph{See also:}
 	|<%=func.see%>|
 <%elseif type(func.see) == "table" and #func.see > 0 then %>
-See also:
+\emph{See also:}
 \begin{itemize}
 	<%for i = 1, #func.see do%>\item[] |<%=func.see[i]%>|<%end%>
 \end{itemize}
