@@ -48,6 +48,10 @@
   sibling distance/.graph drawing graph parameter=evaluate math expression
 }
 
+\pgfgdset{
+  level distance/.graph drawing parameter initial=1cm,
+  sibling distance/.graph drawing parameter initial=1cm,
+}
 
 
 
