@@ -246,6 +246,52 @@
 \def\pgf@gd@@@parameter#1#2#3{#2{#3}{#1}}
 
 
+
+
+
+% Key handler /.graph drawing parameter initial
+%
+% #1 = an initial value
+%
+% Description:
+%
+% Use this key handler instead of /.initial to assign an initial value
+% to a graph parameter. What will happen is that on the Lua layer, the passed
+% value is stored in a special table. Whenever the key is not
+% explicitly set by the user, the value #1 will be used.
+% 
+% Note that
+% 
+%   /foo/.graph drawing graph parameter, /foo=5
+% 
+% and
+% 
+%   /foo/.graph drawing graph parameter, /foo/.graph drawing parameter intial=5
+%   
+% have the same effect insofar as, in both cases, getOption ('/foo')
+% will yield 5. The difference is that in the second case the TeX
+% layer does not need to pass around huge lists of options and will,
+% thus, be faster. In general, it is recommendable that initial values
+% for graph drawing graph parameters are setup using this handler.
+% 
+% #1 is passed through the conversion of the key before being stored.
+
+\pgfkeys{
+  /handlers/.graph drawing parameter initial/.code={
+    {
+      % Hack into setting of edge/node/graph parameters
+       \let\pgfgdgraphparameter\pgf@gd@steal
+      \expandafter\pgfkeys\expandafter{\pgfkeyscurrentpath={#1}}%
+    }
+  }
+}
+
+\def\pgf@gd@steal#1#2{%
+  \directlua{pgf.graphdrawing.Interface:setGraphParameterDefault('\luaescapestring{#1}','\luaescapestring{#2}')}%
+}
+
+
+
 % In many cases, when you specify a graph parameter, you will not wish
 % the "actual" setting of the key to be passed to the algorithm. For
 % instance, suppose we write 
