@@ -1,3 +1,7 @@
+2011-05-10 Till Tantau <tantau@users.sourceforge.net>
+
+	- Added .graph drawing parameter initial key.
+
 2011-05-09 Till Tantau <tantau@users.sourceforge.net>
 
 	- Reorganized graph drawing documentation.
